rocketchat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
  namespace: rocketchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketchat
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
        - name: rocketchat
          image: registry.rocket.chat/rocketchat/rocket.chat:8.6.1
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/info
              port: 3000
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /api/info
              port: 3000
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /api/info
              port: 3000
            periodSeconds: 30
            failureThreshold: 5
