rocketchat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat
  namespace: rocketchat
spec:
  selector:
    app: rocketchat
  ports:
    - name: http
      port: 3000
      targetPort: 3000
